Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30510

Android assets file engine does not support referincing side-by-side types

XMLWordPrintable

    • 6eed3409c4ecf69d3c43cdcbeeca829624b9fe25

      To reproduce:

      Make a new Qt Quick 2 application using the template in Qt Creator. Add a file called e.g. Test.qml next to the main.qml. Reference this type from the main.qml.

      Deploy and run the app on a device. You'll get an error message that the Test type is not available, but QML should be able to resolve it when it's next to the main.qml. If you look under android/assets in the project, you'll see that the file is deployed into assets.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes